--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 	<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
 
 	<link rel="stylesheet" href="app.css">
+
+	<!-- ANGULAR LIBRARIES -->
 	<script src="lib/angular/angular.js"></script>
+	<script src="lib/angular/sticky.js"></script>
 	<script src="lib/angular/angular-ui-router.min.js"></script>
 	<script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+
+	<!-- APP JS CODE -->
 	<script src="js/app.js"></script>
 
 		<script src="js/config.js"></script>
