Add service module

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 		<script src="js/config.js"></script>
 	<script src="js/controller.js"></script>
+	<script src="js/service.js"></script>
 
 
 	<script src="lib/Chart.js/Chart.min.js"></script>
@@ -31,7 +32,7 @@
 		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
-				<a class="navbar-brand" ui-sref="home">Clementi - WA 10 Steps {{main.test}}</a>
+				<a class="navbar-brand" ui-sref="home">Clementi - {{main.test}}  {{main.asdf}}</a>
 				<ul class="nav navbar-nav">
   <li><a ui-sref="home">Home</a></li>
 	  <li><a ui-sref="about">About</a></li>
