--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<script src="js/config.js"></script>
 	<script src="js/controller.js"></script>
 	<script src="js/service.js"></script>
+	<script src="js/directives.js"></script>
 
 
 	<script src="lib/Chart.js/Chart.min.js"></script>
@@ -32,7 +33,7 @@
 		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
-				<a class="navbar-brand" ui-sref="home">Clementi - {{main.test}}  {{main.asdf}}</a>
+				<a class="navbar-brand" ui-sref="home">Clementi - {{main.title}}</a>
 				<ul class="nav navbar-nav">
   <li><a ui-sref="home">Home</a></li>
 	  <li><a ui-sref="about">About</a></li>
@@ -65,6 +66,9 @@
 			<p>
 				This site is for educational purposes only. <br>It does not constitute a recommendation to buy or sell a financial product.
 			</p>
+
+
+				{{main.cashflow | json}}
 </div>
 
 
@@ -73,6 +77,8 @@
 	</div>
 
 <div class='container'>
+
+
 
 	<div ui-view autoscroll="false"></div>
 
