--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<script src="js/app.js"></script>
 
 		<script src="js/config.js"></script>
-	<script src="js/controller.js"></script>
-	<script src="js/service.js"></script>
+	<script src="js/controllers/maincontroller.js"></script>
+	<script src="js/services/MorningStarService.js"></script>
 	<script src="js/directives.js"></script>
 
 
