--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
-				<a class="navbar-brand" ui-sref="home">Clementi - {{main.title}}</a>
+				<a class="navbar-brand" ui-sref="home">Clementi - {{title}}</a>
 				<ul class="nav navbar-nav">
   <li><a ui-sref="home">Home</a></li>
 	  <li><a ui-sref="about">About</a></li>
@@ -68,7 +68,7 @@
 			</p>
 
 
-				{{main.cashflow | json}}
+				{{cashflow | json}}
 </div>
 
 
